[package]
name = "advent-of-code-2021"
authors = ["Linus <linus_18@outlook.com>"]
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "^0.3.0"
aoc-runner-derive = "^0.3.0"
itertools = "^0.10.1"
array2d = "0.2.1"