[package]
name = "advent-of-code-2021"
authors = ["Linus <linus_18@outlook.com>"]
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "^0.3.0"
aoc-runner-derive = "^0.3.0"
itertools = "^0.10.1"
array2d = "0.2.1"
bimap = "0.5.3"
petgraph = "0.6.0"
intervallum = "1.4.0"
gcollections = "1.5.0"
hex = "0.4.3"
nom = "7.1.0"
nalgebra = "0.30.1"

#[lib]
#proc-macro = true